# Skera

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  UPGRADE_PLAN.md
data/signatures/: assets.toml  libraries.toml
src/: lib.rs
src/ai/: mod.rs
src/analysis/: binary_inspector.rs  copyrightability.rs  dependency_graph.rs  dependency_resolver.rs  git_forensics.rs  mod.rs  sbom.rs  source_scanner.rs
src/audit/: crates_io.rs  crx.rs  mod.rs  npm.rs  pypi.rs  url_fetcher.rs
src/detection/: advanced_deobfuscation.rs  asset_fingerprint.rs  attribution_checker.rs  code_embeddings.rs  contamination.rs  creative_commons.rs  cross_language.rs  data_rights.rs  deobfuscation.rs  header_detector.rs  js_analysis.rs  js_bundle_forensics.rs  js_signatures.rs  license_identifier.rs  license_text_forensics.rs  media_forensics.rs  mod.rs  scancode_bridge.rs  similarity.rs  snippet_matcher.rs  structural_fingerprint.rs  supply_chain_audit.rs  wasm_forensics.rs  web_asset_scanner.rs  yara_scanner.rs
src/engine/: cache.rs  comparison.rs  correlation.rs  dedup.rs  file_index.rs  mod.rs  pipeline.rs  repo_clone.rs  scoring.rs
src/engine/phases/: ai_verification.rs  asset_scan.rs  binary_analysis.rs  creative_commons.rs  cross_language.rs  data_rights.rs  deobfuscation.rs  dependency.rs  fingerprinting.rs  header_analysis.rs  js_forensics.rs  license_forensics.rs  media_scan.rs  mod.rs  scancode_phase.rs  source_scan.rs  supply_chain.rs  web_assets.rs  yara_scan.rs
src/evidence/: mod.rs
src/ingest/: archive.rs  binary.rs  detector.rs  docker.rs  electron.rs  git_repo.rs  mobile.rs  mod.rs  stdin.rs  wasm.rs  web_crawler.rs
src/license/: classifier.rs  compatibility.rs  mod.rs  spdx.rs  spdx_expression.rs
src/policy/: mod.rs
src/report/: comparison.rs  json.rs  markdown.rs  mod.rs  sarif.rs  sbom.rs
tests/: adversarial_forensics.rs  scan_securly.rs
