[package]
name = "skera"
description = "Universal digital copyright forensics engine — carves through obfuscation to prove origin"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Santh"]
repository = "https://github.com/contactmukundthiru-cyber/Skera"
readme = "README.md"
keywords = ["license", "compliance", "forensics", "sbom", "copyright"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
yara = ["dep:yara-x"]
asset-fingerprint = ["dep:blockhash", "dep:image"]
media-forensics = ["dep:vid_dup_finder_lib", "dep:rusty-chromaprint"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Pattern matching
regex = "1.10"
aho-corasick = "1.1"

# Hashing
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Binary parsing
goblin = "0.8"
object = "0.32"
bytes = "1.5"

# Filesystem
walkdir = "2.4"
tempfile = "3.9"

# Parallelism
rayon = "1.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
once_cell = "1.19"
dashmap = "5.5"

# HTTP client (for internet-scale auditing)
reqwest = { version = "0.12", features = ["json"] }

# License forensics
semver = "1.0"
strsim = "0.11"
url = "2.5"

# Forensic similarity & license identification
askalono = "0.5"
fast-tlsh = "0.1"
fuzzyhash = "0.2"

# Optional heavy forensic tools
yara-x = { version = "0.12", optional = true }
blockhash = { version = "0.4", optional = true }
image = { version = "0.25", optional = true }

# Optional media forensics
vid_dup_finder_lib = { version = "0.4", optional = true }
rusty-chromaprint = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util"] }
